fix: sbt forks a new jvm to run the simulation, so it does not automatically close in batch mode